chore: Refactor + README.md
